touched up some spacing, consistency, and other issues

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -10,89 +10,89 @@
 .slideshow-container {
 	width: 100% auto;
 	height: auto;
-  position: relative;
-	top: 75px;
+  	position: relative;
+	/*top: 75px;*/
 	margin: auto;
 	box-sizing: border-box;
 }
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: #ecf0f1;
-  font-weight: bold;
-  font-size: 50px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: #ecf0f1;
+	font-weight: bold;
+	font-size: 50px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+  	right: 0;
+  	border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  	background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text (not used, but can be used for another slideshow)*/
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 40px;
-  width: 100%;
-  text-align: center;
+  	color: #f2f2f2;
+  	font-size: 15px;
+  	padding: 8px 12px;
+  	position: absolute;
+  	bottom: 40px;
+  	width: 100%;
+  	text-align: center;
 }
 
 /* Position dots at bottom of image */
 .dotsPosition {
-  color: #f2f2f2;
-  /*padding: 8px 12px; causes width to be over 100%*/
-  position: absolute;
+  	color: #f2f2f2;
+  	/*padding: 8px 12px; causes width to be over 100%*/
+  	position: absolute;
 	bottom: 15px;
-  width: 100%;
+  	width: 100%;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor:pointer;
-  height: 13px;
-  width: 13px;
-  margin: 0 2px;
-  background-color: #fff;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+  	cursor:pointer;
+  	height: 13px;
+  	width: 13px;
+  	margin: 0 2px;
+  	background-color: #fff;
+  	border-radius: 50%;
+  	display: inline-block;
+  	transition: background-color 0.6s ease;
 }
 
 /* Hover, turn black */
 .active, .dot:hover {
-  background-color: #000;
+  	background-color: #000;
 }
 
 /* Fading animation (Change to different transition)*/
 .fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 2.3s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2.3s;
+  	animation-name: fade;
+    animation-duration: 1.5s;
 }
 @-webkit-keyframes fade {
-  from {opacity: .7}
-  to {opacity: 1}
+  	from {opacity: .7}
+  	to {opacity: 1}
 }
 @keyframes fade {
-  from {opacity: .7}
-  to {opacity: 1}
+  	from {opacity: .7}
+  	to {opacity: 1}
 }
 
 
@@ -124,7 +124,7 @@ hr{
 }
 
 #welcome{
-	padding: 50px 0 30px 0;
+	padding: 0 0 30px 0;
 }
 #welcome h3, #welcome h4{
 	text-align: center;
