--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/*main.css*/
+
 @import url('https://fonts.googleapis.com/css?family=Coming+Soon|News+Cycle|Abel');
 
 body{
@@ -9,16 +11,6 @@ body{
 	display: none;
 }
 
-.center_block{
-	width: 1200px;
-	margin: auto;
-}
-
-#content{
-	overflow: auto;
-	padding-top: 12px;
-	background-color: #ecf0f1; /*super light grey*/
-}
 
 /*-----------------------------------------------------------------------------*/
 /*NavBar Desktop View*/
@@ -64,6 +56,9 @@ body{
 	padding-top: 8px;
 	margin-left: 25px;
 }
+#header li:nth-child(4){
+	overflow: hidden; /*keeps homepage icon link from extending down too far*/
+}
 #header li:nth-child(5){
 	width: 180px;
 	left: 0px;
@@ -73,6 +68,23 @@ body{
 }
 
 /*-----------------------------------------------------------------------------*/
+
+
+.header_spacer{
+	width: 100%;
+	height: 75px;
+}
+.center_block{
+	width: 1200px;
+	margin: auto;
+}
+#content{
+	overflow: auto;
+	background-color: #ecf0f1; /*super light grey*/
+}
+
+
+
 /* Footer Desktop View */
 
 #footer{
@@ -184,8 +196,8 @@ body{
 	#header li:nth-child(5){
 		width: 150px;
 	}
-	#content{
-		padding-top: 60px;
+	.header_spacer{
+		height: 60px;
 	}
 	.center_block{
 		width: 98%;
